--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,20 @@
 {
-  "background_color": "#ffffff",
-  "dir": "ltr",
+  "short_name": "Limpieza",
+  "name": "App de Limpieza Airbnb",
+  "icons": [
+    {
+      "src": "favicon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": ".",
   "display": "standalone",
-  "name": "valen19-gc.github",
-  "orientation": "any",
-  "scope": "/",
-  "short_name": "valen19-gc.github",
-  "start_url": "/",
-  "theme_color": "#ffffff"
+  "theme_color": "#1976d2",
+  "background_color": "#ffffff"
 }
